--- a/ElectricalPowerSystems/packages.config
+++ b/ElectricalPowerSystems/packages.config
@@ -4,6 +4,7 @@
   <package id="Antlr4.CodeGenerator" version="4.6.5" targetFramework="net461" developmentDependency="true" />
   <package id="Antlr4.Runtime" version="4.6.5" targetFramework="net461" />
   <package id="AvalonEdit" version="6.0.1" targetFramework="net461" />
+  <package id="Extended.Wpf.Toolkit" version="3.8.1" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="MathNet.Numerics" version="4.7.0" targetFramework="net461" />
